# github-actions-ci-demo

./: .gitignore  CHANGELOG.md  Dockerfile  main.py  pyproject.toml
.github/workflows/: main.yml
api/: main.py  test.py
tests/: test_app.py
